--- a/app/views/client/outcomes/index.js.erb
+++ b/app/views/client/outcomes/index.js.erb
@@ -1,2 +1,2 @@
-$("#outcome_form").html("");
+$("#new_outcome").html("");
 General.replaceContentWithFade("#outcome_list", "<%= escape_javascript(render partial:'outcome_list', locals: { outcomes: @quiz.outcomes })%>")
