--- a/app/views/client/outcomes/new.js.erb
+++ b/app/views/client/outcomes/new.js.erb
@@ -1,2 +1,2 @@
-General.replaceContentWithFade("#outcome_form", "<%= escape_javascript(render partial: 'form') %>");
+General.replaceContentWithFade("#new_outcome", "<%= escape_javascript(render partial: 'form') %>");
 
