--- a/app/views/client/questions/index.js.erb
+++ b/app/views/client/questions/index.js.erb
@@ -1,4 +1,4 @@
-$("#question_form").html("");
+$("#new_question").html("");
 General.replaceContentWithFade("#question_list", "<%= escape_javascript(render partial:'question_list', locals: { questions: @quiz.questions })%>")
 
 
