--- a/app/views/client/outcomes/create.js.erb
+++ b/app/views/client/outcomes/create.js.erb
@@ -1,3 +1,3 @@
-$("#outcome_form").html("");
-General.replaceContentWithFade('outcome_list', "<%= escape_javascript(render partial:'outcome_list', locals: { outcomes: @quiz.outcomes })%>")
+$("#new_outcome").html("");
+General.replaceContentWithFade('#outcome_list', "<%= escape_javascript(render partial:'outcome_list', locals: { outcomes: @quiz.outcomes })%>")
 
