--- a/app/views/client/outcomes/destroy.js.erb
+++ b/app/views/client/outcomes/destroy.js.erb
@@ -1,1 +1,1 @@
-General.replaceContentWithFade('outcome_list', "<%= escape_javascript(render partial:'outcome_list', locals: { outcomes: @quiz.outcomes })%>")
+General.replaceContentWithFade('#outcome_list', "<%= escape_javascript(render partial:'outcome_list', locals: { outcomes: @quiz.outcomes })%>")
