--- a/app/views/client/questions/_form.html.haml
+++ b/app/views/client/questions/_form.html.haml
@@ -1,9 +1,9 @@
-= form_for [:client, @quiz, @question_form], html:{ multipart: :true }, authenticity_token: true, class: 'project', remote: true  do |f|
+= form_for [:client, @quiz, @question_form], html:{ multipart: :true, id: "question_form" }, authenticity_token: true, remote: true  do |f|
   -if @question_form.persisted?
     %h3 Edit Question
   -else
     %h3 New Question
-  = render partial: 'form_errors_base', locals: {errors: @question_form.errors}
+  = render partial: 'form_errors_base', locals: {the_model: @question_form, form_id: "question_form"}
   .form-group
     = f.label :title, class: "col-sm-2"
     .col-sm-10
