--- a/app/views/client/questions/create.js.erb
+++ b/app/views/client/questions/create.js.erb
@@ -1,2 +1,2 @@
-$("#question_form").html("");
+$("#new_question").html("");
 General.replaceContentWithFade("#question_list", "<%= escape_javascript(render partial:'question_list', locals: { questions: @quiz.questions })%>")
