--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,3 +1,13 @@
+.logo{
+  display: block;
+  text-indent: -9999px;
+  width: 30px;
+  height: 30px;
+  background: url(smart-woman.svg);
+  background-size: 30px 30px;
+}
+
+
 .img-thumbnail{
   max-height: 150px;
 }
