--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -3,7 +3,7 @@
   text-indent: -9999px;
   width: 30px;
   height: 30px;
-  background: url(smart-woman.svg);
+  background:  image-url("smart-woman.svg");
   background-size: 30px 30px;
 }
 
