fix forms and image versions

--- a/app/views/application/_image_form.html.haml
+++ b/app/views/application/_image_form.html.haml
@@ -4,7 +4,7 @@
     .col-sm-2
       = label_tag "Current Image"
     .col-sm-10
-      = image_full f.object, class:"img-thumbnail"
+      = image_full f.object, version: "mid", class:"img-thumbnail"
   .form-group.clearfix
     = label_tag "Upload Via", nil, class: "col-sm-2"
     .col-sm-10
