--- a/app/views/client/outcomes/_outcome_item.html.haml
+++ b/app/views/client/outcomes/_outcome_item.html.haml
@@ -1,7 +1,7 @@
 %li.list-group-item.list-group-item-action{ id:"outcome_#{outcome.id}" }
   .row
     .col-md-2
-      = image_full outcome.image
+      = image_full outcome.image, version: "thumb"
     .col-md-4
       = outcome.title
     .col-md-4
