--- a/app/views/client/questions/_question_item.html.haml
+++ b/app/views/client/questions/_question_item.html.haml
@@ -1,7 +1,7 @@
 %li.list-group-item.list-group-item-action{ id:"question_#{question.id}" }
   .row
     .col-md-2
-      = image_full question.image
+      = image_full question.image, version: "mid"
     .col-md-4
       = question.title
     .col-md-4
