--- a/app/views/client/quizzes/_quiz_item.html.haml
+++ b/app/views/client/quizzes/_quiz_item.html.haml
@@ -1,7 +1,7 @@
 %li.list-group-item.list-group-item-action{ id:"quiz_#{quiz.id}" }
   .row
     .col-md-2
-      = image_full quiz.image
+      = image_full quiz.image, version: "thumb"
     .col-md-3
       = quiz.title
     .col-md-3
