--- a/app/views/quizzes/index.html.haml
+++ b/app/views/quizzes/index.html.haml
@@ -7,7 +7,7 @@
             %h4.card-title
               = quiz.title
           .card-block.text-md-center
-            = image_full quiz.image
+            = image_full quiz.image, version: "mid"
             = img_reference(quiz.image)
           .card-block
             .card-text
