--- a/app/views/client/outcomes/update.js.erb
+++ b/app/views/client/outcomes/update.js.erb
@@ -1,1 +1,1 @@
-General.replaceWithFade('<%= "#outcome_#{@outcome.id}" %>', "<%= escape_javascript(render partial:'outcome_list', locals: { outcomes: @quiz.outcomes })%>")
+General.replaceWithFade('<%= "#outcome_#{@outcome.id}" %>', "<%= escape_javascript(render partial:'client/outcomes/outcome_item', locals: { outcome: @outcome })%>")
