--- a/app/views/client/quizzes/show.html.haml
+++ b/app/views/client/quizzes/show.html.haml
@@ -4,7 +4,7 @@
       %h4.card-title
         = @quiz.title
     .card-block
-      = image_full @quiz.image, class: "img-fluid img-rounded img-thumbnail mx-auto d-block"
+      = image_full @quiz.image, version: "mid", class: "img-fluid img-rounded img-thumbnail mx-auto d-block"
       = img_reference(@quiz.image)
     .card-block
       .card-text
