--- a/app/views/client/questions/new.js.erb
+++ b/app/views/client/questions/new.js.erb
@@ -1,3 +1,8 @@
 //var f = General.showFormErrors('question', "<%= escape_javascript(render partial: 'form') %>", <%=@question_form.errors.to_json.html_safe %>)
-General.replaceContentWithFade("#new_question","<%= escape_javascript(render partial: 'form') %>")
+
+<% if remotipart_submitted? %>
+  General.replaceContentWithFade("#new_question", "<%= j "#{render partial: 'form'}" %>")
+<% else %>
+  General.replaceContentWithFade("#new_question","<%= escape_javascript(render partial: 'form') %>")
+<% end %>
 
