fix default avatar image

--- a/app/views/layouts/_login.html.haml
+++ b/app/views/layouts/_login.html.haml
@@ -3,7 +3,7 @@
     -if current_user
       %li.nav-item
         = link_to edit_users_path, class: 'nav-link'  do
-          = image_tag current_user.avatar.url, alt: current_user.name, class: 'img rounded-circle', height: 50, width:50
+          = image_tag current_user.avatar.url, alt: current_user.name, title: current_user.name ,class: 'img rounded-circle', height: 50, width:50
       %li.nav-item=link_to 'Logout', destroy_user_session_path, :method => :delete, class: 'nav-link'
     -else
       %li.nav-item=link_to 'Register', new_user_registration_path, class: 'nav-link'
