add taggings to quizzes

--- a/app/views/application/_image_form.html.haml
+++ b/app/views/application/_image_form.html.haml
@@ -29,7 +29,7 @@
         .col-sm-10
           = f.text_field :remote_image_file_url, class: "form-control", placeholder: "http://www.example.com/test.jpg"
   .form-group
-    = f.label :ref_title, "Source Name", class: "col-sm-2"
+    = f.label :ref_title, "Source Title", class: "col-sm-2"
     .col-sm-10
       = f.text_field :ref_title, class: "form-control"
   .form-group
