--- a/app/views/client/outcomes/_outcome_item.html.haml
+++ b/app/views/client/outcomes/_outcome_item.html.haml
@@ -1,11 +1,12 @@
 %li.list-group-item.list-group-item-action{ id:"outcome_#{outcome.id}" }
-  .row
-    .col-md-2
-      = image_full outcome.image, version: "thumb"
-    .col-md-4
-      = outcome.title
-    .col-md-4
-      = outcome.percentage_to
-    .col-md-2
-      = link_to 'Edit', edit_client_quiz_outcome_path(outcome.quiz,outcome), remote: true
-      = link_to 'Remove', client_quiz_outcome_path(outcome.quiz, outcome), data: {confirm: 'Are you sure?'}, method: :delete, remote: true
+  .container
+    .row
+      .col-md-2
+        = image_full outcome.image, version: "thumb"
+      .col-md-4
+        = outcome.title
+      .col-md-4
+        = outcome.percentage_to
+      .col-md-2
+        = link_to 'Edit', edit_client_quiz_outcome_path(outcome.quiz,outcome), remote: true
+        = link_to 'Remove', client_quiz_outcome_path(outcome.quiz, outcome), data: {confirm: 'Are you sure?'}, method: :delete, remote: true
