--- a/app/views/layouts/client/application.html.haml
+++ b/app/views/layouts/client/application.html.haml
@@ -7,9 +7,9 @@
     .row
       .col-xs-3.col-md-2
         %nav
-          %ul.nav.nav-sidebar
-            %li
-              =link_to 'My Quizzes', client_quizzes_path
+          %ul.nav.flex-column.nav-sidebar
+            %li.nav-item
+              = active_link_to 'My Quizzes', client_quizzes_path, class:"nav-link"
       .col-xs-9.col-md-10
         = render '/layouts/notice'
         = yield
