--- a/app/views/application/_image_form.html.haml
+++ b/app/views/application/_image_form.html.haml
@@ -1,11 +1,11 @@
 #image-form
   %h4 Main Image
-  .form-group
+  .form-group.row
     .col-sm-2
       = label_tag "Current Image"
     .col-sm-10
       = image_full f.object, version: "mid", class:"img-thumbnail"
-  .form-group.clearfix
+  .form-group.clearfix.row
     = label_tag "Upload Via", nil, class: "col-sm-2"
     .col-sm-10
       %ul.nav.nav-tabs
@@ -15,24 +15,24 @@
           =link_to "URL","#url_upload", class:"nav-link", "data-toggle": "tab", role:"tab"
   .tab-content
     .tab-pane.active{id:"file_upload"}
-      .form-group
+      .form-group.row
         = f.label :image_file, class: "col-sm-2"
         .col-sm-10
           = f.file_field :image_file, class: "form-control"
-      .form-group
+      .form-group.row
         = f.label :ref_url, "Source URL", class: "col-sm-2"
         .col-sm-10
           =f.url_field :ref_url, class: "form-control", placeholder: "http://www.example.com/test.jpg"
     .tab-pane{id:"url_upload"}
-      .form-group
+      .form-group.row
         = f.label :remote_image_file_url, "Image Url", class: "col-sm-2"
         .col-sm-10
           = f.text_field :remote_image_file_url, class: "form-control", placeholder: "http://www.example.com/test.jpg"
-  .form-group
+  .form-group.row
     = f.label :ref_title, "Source Title", class: "col-sm-2"
     .col-sm-10
       = f.text_field :ref_title, class: "form-control"
-  .form-group
+  .form-group.row
     = f.label :title, "Image Title", class: "col-sm-2"
     .col-sm-10
       = f.text_field :title, class: "form-control"
