--- a/app/views/client/questions/_question_item.html.haml
+++ b/app/views/client/questions/_question_item.html.haml
@@ -1,12 +1,13 @@
 %li.list-group-item.list-group-item-action{ id:"question_#{question.id}" }
-  .row
-    .col-md-2
-      = image_full question.image, version: "thumb"
-    .col-md-4
-      = question.title
-    .col-md-4
-      No Answers:
-      = question.answers.count
-    .col-md-2
-      = link_to 'Edit', edit_client_quiz_question_path(question.quiz,question), remote: true
-      = link_to 'Remove', client_quiz_question_path(question.quiz, question), data: {confirm: 'Are you sure?'}, method: :delete, remote: true
+  .container
+    .row
+      .col-md-2
+        = image_full question.image, version: "thumb"
+      .col-md-4
+        = question.title
+      .col-md-4
+        No Answers:
+        = question.answers.count
+      .col-md-2
+        = link_to 'Edit', edit_client_quiz_question_path(question.quiz,question), remote: true
+        = link_to 'Remove', client_quiz_question_path(question.quiz, question), data: {confirm: 'Are you sure?'}, method: :delete, remote: true
