--- a/app/views/outcomes/show.html.haml
+++ b/app/views/outcomes/show.html.haml
@@ -1,5 +1,5 @@
 .outcome-box
-  .card.text-md-center.card-outline-primary
+  .card.text-center.card-outline-primary
     .card-header.heading-bk
       %h4.card-title
         = "You scored #{@result[:percentage]}%! - "
@@ -10,7 +10,7 @@
     .card-block
       .card-text
         = @outcome.description
-    .card-footer.text-md-center
+    .card-footer.text-center
       -unless @preview
         = button_tag 'Share on facebook!', style: 'button', onclick: "Social.share(this)", class:"btn btn-primary", data:{ 's-href': request.original_url, 's-redirect-url': quiz_url(@quiz) }
       -if @preview
