--- a/app/views/quizzes/index.html.haml
+++ b/app/views/quizzes/index.html.haml
@@ -2,15 +2,16 @@
   .row
     - @quizzes.each do |quiz|
       .col-xs-12.col-sm-6.col-md-4
-        .card.text-md-center.card-outline-primary
+        .card.text-center.card-outline-primary
           .card-header.heading-bk
             %h4.card-title
               = quiz.title
-          .card-block.text-md-center
+          .card-block.text-center
             = image_full quiz.image, version: "mid"
+            %br
             = img_reference(quiz.image)
           .card-block
             .card-text
               = quiz.description
-          .card-footer.text-md-center
+          .card-footer.text-center
             = link_to "Play Now", quiz, class: "btn btn-success"
