update to rails 5.1 with yarn and webpack

--- a/app/views/public/game_group/word_colour_game/show.haml
+++ b/app/views/public/game_group/word_colour_game/show.haml
@@ -1,3 +1,2 @@
 = content_tag :div, nil, id: "renderer"
-= javascript_include_tag 'webpack/gameColourWords-bundle'
-
+= javascript_pack_tag 'gameColourWords/index'
